# lexio-english

./: .gitignore  CLAUDE.md  Cargo.toml  LEXIO_DESIGN_SYSTEM.md  LEXIO_DOCUMENTATION.md  LEXIO_PRD.md  PROGRESS.md  electron-builder.yml  implementation_plan.md  implementation_plan_tauri  index.html  overlay.html  package-lock.json  package.json  playwright.config.ts  tauri.conf.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: code-quality-reviewer.md  github-operator.md  lexio-e2e-tester.md
.claude/inline-translation/: PROGRESS.md  README.md  SPEC.md  fase-1-backend-deteccao.md  fase-2-frontend-dialog.md  fase-3-1-groq-api.md  fase-3-backend-commands.md  fase-4-integracao.md  fase-5-polish.md
.claude/rules/: lessons_learned.md  rules.md
.claude/tauri-migration/: README.md  SPEC.md  fase-1-scaffolding.md  fase-2-db-settings.md  fase-3-groq-api.md  fase-4-1-overlay-fix.md  fase-4-windows-shortcuts-tray.md  fase-5-overlay-translation.md  (+1 more)
src/tauri/: Cargo.toml  tauri.conf.json
src/tauri/capabilities/: main.json  overlay.json
src/tauri/icons/: icon.icns
src/tauri/src/: lang_detect.rs  main.rs  selection_watcher.rs  shortcuts.rs  state.rs  text_bridge.rs  tray.rs  types.rs  updater.rs
src/tauri/src/ai_client/: config.rs  mod.rs  translate_prompt.rs  word_prompt.rs
src/tauri/src/commands/: mod.rs  overlay.rs  suggestion.rs  window.rs  words.rs
src/tauri/src/db/: mod.rs  settings.rs  words.rs
tests/: electron.test.ts  locale-select.spec.ts  meaning-short.spec.ts
(+76 files in other folders)
